[Core] Fix the "edit all" form fields alignment.

--- a/core-bundle/src/Resources/contao/themes/flexible/src/main.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/src/main.css
@@ -358,6 +358,16 @@ input[type=search]::-webkit-search-decoration {
 .tl_help a:hover,.tl_help a:focus,.tl_help a:active {
 	text-decoration:underline;
 }
+.tl_formbody_edit.nogrid .w50 {
+	float:none;
+}
+.tl_formbody_edit.nogrid .cbx {
+	height:auto;
+}
+.tl_formbody_edit.nogrid .m12 {
+	margin-top:0;
+	margin-bottom:0;
+}
 .tl_formbody_submit {
 	border-top:1px solid #ddd;
 }
